@@ -3,6 +3,7 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 1.2.18
 =========================
+ -- BLUEGENE - bug fix for smap telling passthroughs are used when they aren't
 
 * Changes in SLURM 1.2.17
 =========================
